kubernetes/bundle/downstream/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
